--- a/output.css
+++ b/output.css
@@ -173,6 +173,9 @@
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
+  .p-20 {
+    padding: calc(var(--spacing) * 20);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
